--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
     <title>My-notes</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
         <br> <br>
         <div id="note-head">
             <input type="text" id="note-title" placeholder="Title..."/>
-            <button id="note-save-btn" onclick="saveNote()">Save</button>
+            <button id="note-save-btn">Save</button>
         </div>
         <br> <br>
         <textarea id="note-content" cols="91" rows="38" placeholder="Enter your note..."></textarea>
